<resources>
    <string name="app_name">Millennium</string>

    <string name="cd_ic_email">ic_email</string>
    <string name="cd_ic_user_register">ic_user_register</string>
    <string name="cd_ic_back">ic_back</string>
    <string name="cd_ic_password">ic_password</string>
    <string name="cd_ic_phone">ic_phone</string>
    <string name="cd_ic_camera">ic_camera</string>

    <string name="hint_correo_electronico_register">Correo electrónico (Requerido)</string>
    <string name="hint_correo_electronico">Correo electrónico</string>
    <string name="hint_contrasena_register">Contraseña (Requerido)</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="hint_nombre_de_usuario">Nombre de usuario (Requerido)</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_confirmar_contrasena_register">Confirmar contraseña (Requerido)</string>
    <string name="hint_titulo_requerido">Título (Requerido)</string>
    <string name="hint_descripcion_requerido">Descripción (Requerido)</string>
    <string name="hint_categoria_requerido">Categoría (Requerido)</string>
    <string name="hint_precio_requerido">Precio (Requerido)</string>
    <string name="hint_negociable">Negociable</string>
    <string name="hint_estado_del_producto">Estado del producto</string>

    <string name="btn_entrar">Entrar</string>
    <string name="btn_registrarse">¡Registrarse!</string>
    <string name="btn_publicar">Publicar</string>

    <string name="mtv_no_tienes_cuenta">¿No tienes cuenta? Regístrate</string>
    <string name="mtv_o">O</string>
    <string name="mtv_registrate_ahora">Regístrate ahora</string>
    <string name="mtv_introduzca_sus_datos">Introduzca sus datos</string>
    <string name="mtv_info_del_producto">Info del producto</string>
    <string name="mtv_debes_subir_al_menos_1_imagen">Debes subir al menos 1 imagen</string>
    <string name="mtv_editar">Editar</string>
    <string name="mtv_eliminar">Eliminar</string>
    <string name="mtv_elige_una_opcion">Elige una opción</string>
    <string name="mtv_tomar_una_foto">Tomar una foto</string>
    <string name="mtv_abrir_la_galeria">Abrir la galería</string>
    <string name="mtv_productos">Productos</string>

    <string name="msg_error_username">Nombre requerido - mínimo 4 caracteres</string>
    <string name="msg_error_email">Email requerido - introduzca un email válido</string>
    <string name="msg_error_phone">El teléfono debe tener 9 dígitos</string>
    <string name="msg_error_password">Contraseña requerida - mínimo 8 caracteres</string>
    <string name="msg_error_password_confirm">La contraseña no coincide</string>
    <string name="msg_error_cargar_imagen_galeria">Se produjo un error al cargar la imagen</string>
    <string name="msg_error_archivo_no_permitido">Archivo no permitido</string>
    <string name="msg_error_title_producto">Título requerido - mínimo 10 caracteres</string>
    <string name="msg_error_description_producto">Descripción requerida - mínimo 10 caracteres</string>
    <string name="msg_error_category_producto">Seleccione una categoría</string>
    <string name="msg_error_price_producto">Precio requerido - introduzca un precio válido</string>
    <string name="msg_error_producto_publicado">No se ha podido publicar su producto. Inténtelo de nuevo</string>
    <string name="msg_error_guardar_imagen">No se ha podido guardar las imágenes. Inténtelo de nuevo</string>
    <string name="msg_error_usuario_no_existe">Usuario no existe</string>

    <string name="msg_alert_iniciando_sesion">Iniciando sesión…</string>
    <string name="msg_alert_creando_cuenta">Creando cuenta…</string>
    <string name="msg_alert_creando_producto">Publicando producto…</string>

    <string name="msg_timestamp_hace">Hace</string>
    <string name="msg_timestamp_un_momento">un momento</string>
    <string name="msg_timestamp_un_minuto">un minuto</string>
    <string name="msg_timestamp_una_hora">una hora</string>
    <string name="msg_timestamp_minutos">minutos</string>
    <string name="msg_timestamp_horas">horas</string>
    <string name="msg_timestamp_ayer">ayer</string>
    <string name="msg_timestamp_dias">dias</string>

    <string name="msg_info_activar_permisos_camara">Tienes el permiso de la cámara denegado. Vaya a ajustes / Aplicaciones / Administrar aplicaciones / Millennium / Permisos de la aplicación</string>
    <string name="msg_info_activar_permisos_galeria">Tienes el permiso de write_external_storage denegado. Vaya a ajustes / Aplicaciones / Administrar aplicaciones / Millennium / Permisos de la aplicación</string>
    <string name="msg_info_permisos_denegados">Permisos denegados</string>
    <string name="msg_info_imagen_eliminada">Imagen eliminada</string>
    <string name="msg_info_producto_publicado">Producto publicado</string>
    <string name="msg_info_tiempo_espera">Espere a que se establezca la información del usuario</string>

    <string name="bnv_title_inicio">Inicio</string>
    <string name="bnv_title_filtrar">Filtrar</string>
    <string name="bnv_title_publicar">Publicar</string>
    <string name="bnv_title_chat">Chat</string>
    <string name="bnv_title_perfil">Perfil</string>

    <!--CATEGORIAS-->
    <string name="cat_coches">Coches</string>
    <string name="cat_motos_bicicleta">Motos y Bicicletas</string>
    <string name="cat_motor_accesorios">Motor y Accesorios</string>
    <string name="cat_moda_accesorios">Modas y Accesorios</string>
    <string name="cat_inmobiliaria">Inmobiliaria</string>
    <string name="cat_informatica_electronica">Informática y Electrónica</string>
    <string name="cat_deporte_ocio">Deporte y Ocio</string>
    <string name="cat_consolas_videojuegos">Consolas y Videojuegos</string>
    <string name="cat_hogar_jardin">Hogar y Jardín</string>
    <string name="cat_electrodomésticos">Electrodomésticos</string>
    <string name="cat_cine_libros_música">Cine, Libros y Música</string>
    <string name="cat_niños_bebes">Niños y Bebes</string>
    <string name="cat_coleccionismo">Coleccionismo</string>
    <string name="cat_otros">Otros</string>

    <!--ESTADOS DEL PRODUCTO-->
    <string name="est_sin_abrir">Sin abrir</string>
    <string name="est_nuevo">Nuevo</string>
    <string name="est_como_nuevo">Como nuevo</string>
    <string name="est_buen_estado">En buen estado</string>
    <string name="est_condiciones_aceptables">En condiciones aceptables</string>
    <string name="est_mucho_uso">Con mucho uso</string>

    <!--OPCIONES DE PRECIO NEGOCIABLE-->
    <string name="neg_si">Sí</string>
    <string name="neg_no">No</string>

    <!--String sin especificar-->
    <string name="sel_sin_especificar">---</string>

    <!--Transicion picture-->
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="mtv_sin_internet">-</string>
    <string name="mtv_opiniones">Opiniones</string>
    <string name="btn_editar_perfil">Editar perfil</string>
    <string name="item_menu_profile_cerrar_sesion">Cerrar sesión</string>
    <string name="item_menu_profile_informacion_de_la_app">Información de la app</string>
    <string name="msg_info_sesion_cerrada">Sesión cerrada</string>
    <string name="mtv_modificar_datos_usuario_perfil">Modifica su foto de portada, su foto de perfil y/o sus datos personales</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="mtv_editar_perfil">Editar perfil</string>
    <string name="msg_info_cambios_aplicados">Cambios aplicados</string>
    <string name="msg_alert_aplicando_cambios">Aplicando cambios</string>
    <string name="cd_imagen_producto">imagen producto</string>
    <string name="cd_imagen_like">imagen like</string>
    <string name="msg_info_sin_productos">Aún no se han publicado productos. Estás de suerte! Prueba en ser el primero</string>
    <string name="tab_productos">Productos</string>
    <string name="tab_opiniones">Opiniones</string>
    <string name="mtv_sin_opiniones">Sin opiniones…</string>
    <string name="mtv_sin_productos">Sin productos…</string>
    <string name="cd_ic_delete">ic_delete</string>
    <string name="mtv_eliminar_producto">Eliminar producto</string>
    <string name="mtv_seguro_que_desea_eliminar_la_publicacion">¿Seguro que desea eliminar la publicación?</string>
    <string name="mtv_cancelar">Cancelar</string>
    <string name="item_menu_detail_product_likes">likes</string>
    <string name="cd_ic_like">ic_like</string>
    <string name="btn_ver_perfil">Ver perfil</string>
    <string name="mtv_descripcion">Descripción</string>
    <string name="mtv_estado_del_producto">Estado del producto</string>
    <string name="mtv_negociable">Negociable</string>
    <string name="mtv_cargando_usuario">Cargando usuario</string>
    <string name="btn_chatear">Chatear</string>
    <string name="mtv_me_gusta">Me gusta</string>
    <string name="mtv_info_sin_productos_favoritos">Guarde los productos que quiera pulsando en el icono del producto favorito (❤️)</string>
    <string name="hola_mundo">hola mundo</string>

    <!--ID DEL CANAL POR DEFECTO DE NOTIFICACIONES OBLIGATORIO-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="mtv_chats">Chats</string>
    <string name="mtv_msg_info_sin_chats">No tienes chats abiertos. Para crear un chat vaya al perfil de un usuario y pulse en Chatear</string>
    <string name="hint_mensaje">Mensaje...</string>
    <string name="cd_ic_send_message">ic_send_message</string>
    <string name="mtv_telefono">Teléfono</string>
    <string name="mtv_sin_me_gustas">Sin me gustas…</string>
    <string name="tab_likes">Me gustas</string>
    <string name="mtv_msg_info_busqueda_sin_productos">Su búsqueda no corresponde con ningún producto</string>
    <string name="mtv_filtrar">Filtrar</string>
    <string name="mtv_msg_info_sin_prodcutos_filtrados">No se han encontrado productos por la categoria</string>
    <string name="mtv_filtrado">Filtrado</string>
</resources>