<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bnv_title_inicio" />

    <item
        android:id="@+id/likeFragment"
        android:icon="@drawable/ic_like"
        android:title="@string/bnv_title_me_gusta" />

    <item
        android:id="@+id/postFragment"
        android:icon="@drawable/ic_post"
        android:title="@string/bnv_title_publicar" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/bnv_title_chat" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/bnv_title_perfil" />

</menu>