<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_background"
    android:id="@+id/cl_bottom_sheet_confirm_delete_product">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsami_bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/mtv_eliminar_producto"
            android:layout_marginTop="@dimen/max_padding_view"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsami_regular"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/mtv_seguro_que_desea_eliminar_la_publicacion"
            android:layout_marginTop="@dimen/min_padding_view"
            android:layout_marginBottom="@dimen/max_padding_view"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_cancel"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:fontFamily="@font/balsami_bold"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/mtv_cancelar" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_delete"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:fontFamily="@font/balsami_bold"
                android:textColor="@color/white"
                android:background="@color/red"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/mtv_eliminar" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>