<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_bottom_sheet_options_source_images"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_background"
    android:paddingBottom="@dimen/padding_bottom_view_bottom_sheet_options_source_images">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/min_padding_view">

        <View
            android:layout_width="@dimen/width_line_bottom_sheet"
            android:layout_height="@dimen/height_line_bottom_sheet"
            android:background="@drawable/view_bottomsheet_line_background"
            android:layout_gravity="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/balsami_bold"
            android:text="@string/mtv_elige_una_opcion"
            android:textSize="@dimen/size_mtv_elige_opcion_bottom_sheet_options_source_images"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/min_padding_view"
            android:layout_marginBottom="@dimen/min_padding_view"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top_sources_images_bottom_sheet"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_camera"
                    android:layout_width="@dimen/size_icons_bottom_sheet_optinos_source_images"
                    android:layout_height="@dimen/size_icons_bottom_sheet_optinos_source_images"
                    android:src="@drawable/ic_camera_sheet"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cd_ic_camera" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/balsami_bold"
                    android:text="@string/mtv_tomar_una_foto"
                    android:textSize="@dimen/size_mtvs_bottom_sheet_options_source_images"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_galeria"
                    android:layout_width="@dimen/size_icons_bottom_sheet_optinos_source_images"
                    android:layout_height="@dimen/size_icons_bottom_sheet_optinos_source_images"
                    android:src="@drawable/ic_galeria_sheet"
                    android:layout_gravity="center" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/balsami_bold"
                    android:text="@string/mtv_abrir_la_galeria"
                    android:textSize="@dimen/size_mtvs_bottom_sheet_options_source_images"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>